# Tutorials

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  ruff.toml
Ongoing/Tutorial1/taxi_driver_agent/: README.md  justfile  pyproject.toml
Ongoing/Tutorial1/taxi_driver_agent/taxi_driver_agent/: __init__.py  __main__.py
Ongoing/Tutorial1/taxi_driver_env/: README.md  justfile  pyproject.toml
Ongoing/Tutorial1/taxi_driver_env/taxi_driver_env/: __init__.py
Ongoing/Tutorial1/taxi_driver_env/taxi_driver_env/envs/: __init__.py  taxi_driver_env.py
Tutorial1/: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
Tutorial1/taxi_driver_agent/: README.md  justfile  pyproject.toml
Tutorial1/taxi_driver_agent/taxi_driver_agent/: __init__.py  __main__.py
Tutorial1/taxi_driver_agent/taxi_driver_agent/pyflow/: __init__.py  core.py  genetic.py  gradient.py  optimizers.py  sequential.py
Tutorial1/taxi_driver_agent/taxi_driver_agent/pyflow/layers/: __init__.py  dense.py  genetic_dense.py
Tutorial1/taxi_driver_env/: README.md  justfile  pyproject.toml
Tutorial1/taxi_driver_env/taxi_driver_env/: __init__.py  __main__.py  constants.py  types.py
Tutorial1/taxi_driver_env/taxi_driver_env/cameras/: camera_follower.py  camera_free.py  camera_zoomer.py
Tutorial1/taxi_driver_env/taxi_driver_env/effects/: fade_inout.py  fade_scr.py  open_horizontal.py  open_vertical.py
Tutorial1/taxi_driver_env/taxi_driver_env/entities/: badge.py  car.py  explosion.py  floating.py  marker.py  minimap.py  taxi_driver.py  world.py
Tutorial1/taxi_driver_env/taxi_driver_env/envs/: __init__.py  tutorial1_env.py
Tutorial1/taxi_driver_env/taxi_driver_env/game/cameras/: camera_follower.py  camera_free.py
Tutorial1/taxi_driver_env/taxi_driver_env/game/entities/: car.py  explosion.py  floating.py  marker.py  taxi_driver.py  world.py
Tutorial1/taxi_driver_env/taxi_driver_env/game/scenes/: __init__.py  gameplay.py  loading.py  title.py  trainer.py
Tutorial1/taxi_driver_env/taxi_driver_env/game/widgets/: meter.py  minimap.py
Tutorial1/taxi_driver_env/taxi_driver_env/math/: envelope.py  geom.py  graph.py  linalg.py
Tutorial1/taxi_driver_env/taxi_driver_env/physic/: constants.py  engine.py  euler.py  types.py
Tutorial1/taxi_driver_env/taxi_driver_env/render/: pyrayex.py  types.py
Tutorial1/taxi_driver_env/taxi_driver_env/render/effects/: fade_inout.py  fade_scr.py  open_horizontal.py  open_vertical.py
Tutorial1/taxi_driver_env/taxi_driver_env/render/widgets/: button.py  message_box.py  screen.py
Tutorial1/taxi_driver_env/taxi_driver_env/resources/: __init__.py
Tutorial1/taxi_driver_env/taxi_driver_env/resources/sprites/: spritesheet.ase
Tutorial1/taxi_driver_env/taxi_driver_env/scenes/: __init__.py  gameplay.py  loading.py  title.py  trainer.py
Tutorial1/taxi_driver_env/taxi_driver_env/utils/: bitbang.py  pyray_ex.py  types.py
Tutorial1/taxi_driver_env/taxi_driver_env/widgets/: button.py  message_box.py  screen.py
Tutorial1/taxi_driver_env/tests/: test_linalg.py  test_point.py  test_segment.py
Tutorial1/tests/: test_edge.py  test_linalg.py  test_point.py  test_segment.py
Tutorial1/tutorial1/: __init__.py  __main__.py  car.py  constants.py  graph.py  map.py  math.py  resources.py  world.py
Tutorial1/tutorial1/cameras/: camera_follower.py
Tutorial1/tutorial1/effects/: fade_inout.py  fade_scr.py  open_horizontal.py  open_vertical.py
Tutorial1/tutorial1/entities/: car.py  explosion.py  marker.py  minimap.py  taxi_driver.py  world.py
Tutorial1/tutorial1/envs/: __init__.py  tutorial1_env.py
Tutorial1/tutorial1/math/: envelope.py  geom.py  graph.py  linalg.py
Tutorial1/tutorial1/resources/: __init__.py
Tutorial1/tutorial1/scenes/: __init__.py  gameloop.py  gameplay.py  loading.py  title.py  trainer.py
Tutorial1/tutorial1/util/: envelope.py  funcs.py  geom.py  graph.py  pyray_ex.py  resources.py  types.py
Tutorial1/tutorial1/utils/: colorize.py  pyray_ex.py  types.py
Tutorial1/tutorial1/widgets/: button.py  message_box.py  screen.py
Tutorial2/: README.md  agent.model.new  justfile  pyproject.toml
Tutorial2/tutorial2/: __init__.py  __main__.py
Tutorial2/tutorial2/pyflow/: __init__.py  conv1d.py  core.py  dense.py  functions.py  genetic.py  gradient.py  optimizers.py  sequential.py
Tutorial2/tutorial2/pyflow/genetic/: dense.py  model.py
Tutorial2/tutorial2/pyflow/layers/: __init__.py  dense.py  genetic_dense.py
