[tool.poetry]
name = "tutorial1"
version = "0.1.0"
description = ""
authors = ["Romuald Rousseau <romuald.rousseau@servier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
raylib = "^5.0.0.2"
numpy = "^2.0.0"
gymnasium = "^0.29.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*", "tutorial1/util/*"]
