[tool.poetry]
name = "tutorial2"
version = "0.1.0"
description = ""
authors = ["Romuald Rousseau <romualdrousseau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^0.29.1"
tutorial1 = { path = "../Tutorial1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*", "tutorial1/util/*"]

[tool.black]
line-length = 120

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",  # pep8-naming
    #    "D",  # pydocstyle
    "PD",  # pandas-vet
    "PL",  # Pylint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",    # line too long, handled by black
    "E731",    # accept lambda
    "RUF005",  # collection literal concatenation
    "PLR0913", # Too many arguments to function call
    "N803",    # Argument name should be lowercase
    "N806",    # Variable name should be lowercase
]
