[tool.poetry]
name = "tutorial2"
version = "0.1.0"
description = ""
authors = ["Romuald Rousseau <romualdrousseau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^0.29.1"
numpy = "^2.0.0"
fire = "^0.6.0"
tutorial1 = { path = "../Tutorial1" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.3"
pre-commit = "^3.7.1"
mypy = "^1.10.0"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*", "tutorial1/util/*"]

[tool.black]
line-length = 120

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",  # pep8-naming
    #    "D",  # pydocstyle
    "PD",  # pandas-vet
    "PL",  # Pylint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",    # line too long, handled by black
    "E731",    # accept lambda
    "RUF005",  # collection literal concatenation
    "PLR0913", # Too many arguments to function call
]
