[tool.poetry]
name = "taxi_driver_agent"
version = "0.1.0"
description = ""
authors = ["Romuald Rousseau <romualdrousseau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^0.29.1"
numpy = "^2.0.0"
fire = "^0.6.0"
taxi_driver_env = { path = "../taxi_driver_env" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.3"
pre-commit = "^3.7.1"
mypy = "^1.10.0"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
