[tool.poetry]
name = "taxi_driver_env"
version = "0.1.34"
description = ""
authors = ["Romuald Rousseau <romuald.rousseau@servier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
raylib = "^5.0.0.2"
numpy = "^2.0.0"
gymnasium = "^0.29.1"
tqdm = "^4.66.4"
numba = "^0.60.0"
scipy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.3"
pre-commit = "^3.7.1"
mypy = "^1.10.0"
snakeviz = "^2.2.0"
ruff = "^0.5.1"
black = "^24.4.2"
validate-pyproject = "^0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.coverage.run]
omit = [
    "tests/*",
    "taxi_driver_env/utils/*",
    "taxi_driver_env/render/*",
    "taxi_driver_env/game/*",
    "taxi_driver_env/math/linalg.py",
]
